cargo-features = ["edition2021"]

[package]
name = "fltk"
version = "1.56.0"
edition = "2021"
authors = ["https://github.com/KS-Japan/fltk-rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.1.11", features = ["fltk-bundled"] }

[[bin]]
name = "sample"
path = "src/sample.rs"